# osrs-cli

./: .gitignore  .rustfmt.toml  CNAME  Cargo.toml  LICENSE  README.md  RELEASE.md  build.rs  dist-workspace.toml  index.html  rust-toolchain  rust-toolchain.toml  styles.css
.github/workflows/: ci.yml  merge-release.yml  release.yml  test.yml  website.yml
guide/: index.html
install/: index.html
script/: 259.js  449.js  main.js
src/: bin.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: hiscore.rs  mod.rs  ping.rs  price.rs  wiki.rs
src/commands/calc/: drop.rs  mod.rs  prob.rs  stew.rs  xp.rs
src/commands/calc/farm/: herb.rs  mod.rs
src/commands/config/: get.rs  mod.rs  set.rs  set_herb.rs
src/utils/: browser.rs  console.rs  context.rs  diary.rs  farm.rs  fmt.rs  hiscore.rs  http.rs  item.rs  magic.rs  math.rs  mod.rs  prices.rs  skill.rs  table.rs
terminal/: index.html
website/: .eleventy.js  mise.toml  package-lock.json  package.json  webpack.config.js
website/src/: bootstrap.mjs  guide.md  index.md  install.md  terminal.html
website/src/_includes/: default.html  page.html
website/src/styles/: global.scss  header.scss  home.scss  index.scss  main.scss  terminal.scss  theme.module.scss  theme.scss
