[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Command line utility program for Old School RuneScape"
edition = "2021"
keywords = ["osrs", "runescape"]
license = "MIT"
name = "osrs-cli"
repository = "https://github.com/LucasPickering/osrs-cli"
# If you update this, make sure to update the version used in ci.yml
rust-version = "1.56"
version = "0.3.2"

[[bin]]
name = "osrs"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.0"
colored = "^2.0.0"
csv = "^1.1.3"
lazy_static = "^1.4.0"
open = "^1.4.0"
prettytable-rs = "^0.8.0"
regex = "^1.3.9"
serde_json = "^1.0.57"
structopt = "^0.3.15"
thiserror = "^1.0.0"

[dependencies.config]
default-features = false
features = ["json"]
version = "^0.11.0"

[dependencies.num-format]
features = ["with-system-locale"]
version = "^0.4.0"

[dependencies.serde]
features = ["derive"]
version = "^1.0.114"

[dependencies.ureq]
default-features = false
features = ["tls"]
version = "^2.0.1"

[dev-dependencies]
assert_approx_eq = "^1.1.0"

[build-dependencies]
version_check = "^0.9.2"
