[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Command line utility program for Old School RuneScape"
edition = "2021"
keywords = ["osrs", "runescape"]
license = "MIT"
name = "osrs-cli"
repository = "https://github.com/LucasPickering/osrs-cli"
# If you update this, make sure to update the version used in ci.yml
rust-version = "1.56"
version = "1.0.2"

[[bin]]
name = "osrs"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.0"
colored = "^2.0.0"
csv = "^1.1.3"
derive_more = "^0.99.16"
dialoguer = {version = "0.9", default-features = false}
dirs = "4.0"
figment = {version = "^0.10.6", features = ["json"]}
lazy_static = "^1.4.0"
num-format = "^0.4.0"
open = "^2.0.1"
prettytable-rs = "^0.8.0"
regex = "^1.3.9"
serde = {version = "^1.0.114", features = ["derive"]}
serde_json = "^1.0.57"
structopt = "^0.3.15"
strum = {version = "^0.21.0", features = ["derive"]}
thiserror = "^1.0.0"
ureq = {version = "^2.0.1", default-features = false, features = ["json", "tls"]}
urlencoding = "^2.1.0"

[dev-dependencies]
assert_approx_eq = "^1.1.0"

[build-dependencies]
version_check = "^0.9.2"
