[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Command line utility program for Old School RuneScape"
edition = "2021"
keywords = ["osrs", "runescape"]
license = "MIT"
name = "osrs-cli"
repository = "https://github.com/LucasPickering/osrs-cli"
# If you update this, make sure to update the version used in test.yml and rust-toolchain.yml
rust-version = "1.91"
version = "2.0.1"

[lib]
crate-type = ["cdylib", "rlib"] # Needed for wasm
name = "osrs_cli"
path = "src/lib.rs"

# Uncomment when running `npm run build` on Mac, because wasm-opt doesn't work
# on ARM yet
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

# https://github.com/rust-lang/cargo/issues/9208 disable this for wasm
[[bin]]
name = "osrs"
path = "src/bin.rs"

[dependencies]
anyhow = "^1.0.0"
async-trait = "^0.1.52"
colored = "^2.0.0"
csv = "^1.1.3"
derive_more = "^0.99.17"
figment = {version = "^0.10.6", features = ["json"]}
futures = "^0.3.19"
lazy_static = "^1.4.0"
num-format = "^0.4.0"
regex = "^1.3.9"
reqwest = {version = "^0.11.8", default-features = false, features = ["rustls-tls"]}
serde = {version = "^1.0.114", features = ["derive"]}
serde_json = "^1.0.57"
structopt = "^0.3.15"
thiserror = "^1.0.0"
urlencoding = "^2.1.0"

[dev-dependencies]
assert_approx_eq = "^1.1.0"

# Non-wasm dependencies (stuff that can't run in the browser)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
comfy-table = "^5.0.1" # tty feature not supported in wasm
dirs = "4.0"
open = "^2.0.1"
tokio = {version = "^1.15.0", default-features = false, features = ["macros", "rt"]}

# Wasm-only dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
comfy-table = {version = "^5.0.1", default-features = false}
console_error_panic_hook = "^0.1.7"
js-sys = "^0.3.55"
wasm-bindgen = "^0.2.106"
wasm-bindgen-futures = "^0.4.28"
web-sys = {version = "^0.3.55", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "Window",
]}

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
